src/test/resources/tokens/invalid/double_missing_exp_value.unpick
unpick v3
group double
    1.0e